--- a/index.luxe.html
+++ b/index.luxe.html
@@ -60,6 +60,26 @@
       overflow: hidden;
     }
 
+    .bg-video {
+      position: fixed;
+      inset: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      z-index: 0;
+      opacity: 0.35;
+      filter: saturate(1.2) contrast(1.05) brightness(1.05);
+    }
+
+    .bg-overlay {
+      position: fixed;
+      inset: 0;
+      background: linear-gradient(135deg, rgba(255, 231, 179, 0.55), rgba(255, 90, 165, 0.35), rgba(73, 181, 255, 0.35));
+      mix-blend-mode: screen;
+      z-index: 0;
+      pointer-events: none;
+    }
+
     .ambient {
       position: absolute;
       inset: 0;
@@ -489,6 +509,10 @@
 </head>
 <body>
   <div class="page">
+    <video class="bg-video" autoplay muted loop playsinline poster="5.jpg">
+      <source src="Donut2.mp4" type="video/mp4" />
+    </video>
+    <div class="bg-overlay"></div>
     <div class="ambient">
       <span class="glow-one"></span>
       <span class="glow-two"></span>
