--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Donut Palace & Boba Tea — Boutique Donuts, Modern Boba</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Fraunces:wght@300;500;700;900&family=Sora:wght@300;400;500;600&display=swap" rel="stylesheet" />
-  <style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>Donut Palace &amp; Boba Tea — Boutique Donuts, Modern Boba</title>
+<link href="https://fonts.googleapis.com" rel="preconnect"/>
+<link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
+<link href="https://fonts.googleapis.com/css2?family=Fraunces:wght@300;500;700;900&amp;family=Sora:wght@300;400;500;600&amp;display=swap" rel="stylesheet"/>
+<style>
     :root {
       --ink: #171311;
       --charcoal: #231a16;
@@ -252,12 +253,34 @@
       gap: 18px;
     }
 
-    .strip video {
-      border-radius: var(--radius-md);
-      box-shadow: 0 18px 40px rgba(24, 19, 15, 0.18);
+    .strip-item {
+      background: rgba(255, 255, 255, 0.72);
+      border: 1px solid rgba(255, 255, 255, 0.72);
+      border-radius: 22px;
+      overflow: hidden;
+      box-shadow: 0 18px 40px rgba(24, 19, 15, 0.14);
+      display: grid;
+      grid-template-rows: 220px auto;
+      min-height: 100%;
+    }
+
+    .strip-item video {
+      width: 100%;
       height: 220px;
       object-fit: cover;
-      border: 2px solid rgba(255, 255, 255, 0.4);
+      border-bottom: 1px solid rgba(35, 26, 22, 0.12);
+    }
+
+    .history-fact {
+      padding: 14px 16px 16px;
+      background: linear-gradient(180deg, rgba(255, 247, 236, 0.96), rgba(255, 241, 215, 0.95));
+    }
+
+    .history-fact p {
+      margin: 0;
+      font-size: 0.92rem;
+      line-height: 1.45;
+      color: #3a342f;
     }
 
     .section {
@@ -508,136 +531,142 @@
   </style>
 </head>
 <body>
-  <div class="page">
-    <video class="bg-video" autoplay muted loop playsinline poster="5.jpg">
-      <source src="Donut2.mp4" type="video/mp4" />
-    </video>
-    <div class="bg-overlay"></div>
-    <div class="ambient">
-      <span class="glow-one"></span>
-      <span class="glow-two"></span>
-    </div>
-
-    <div class="shell">
-      <header class="reveal">
-        <div class="logo">Donut Palace & Boba Tea</div>
-        <nav class="nav">
-          <a href="#story">Story</a>
-          <a href="#menu">Menu</a>
-          <a href="#gallery">Gallery</a>
-          <a href="#visit">Visit</a>
-        </nav>
-      </header>
-
-      <section class="hero">
-        <div class="hero-copy reveal">
-          <p style="text-transform: uppercase; letter-spacing: 0.24em; font-size: 0.75rem; margin: 0 0 16px;">Abilene, Kansas</p>
-          <h1>Hand‑glazed donuts, modern boba, and a space worth the trip.</h1>
-          <p>Sell the experience with a bold, cinematic website. This concept design blends artisan textures, premium typography, and the motion of your new video assets to make every scroll feel delicious.</p>
-          <div class="cta-row">
-            <a class="cta primary" href="#visit">Reserve a sweet moment</a>
-            <a class="cta secondary" href="#menu">Peek the menu</a>
-          </div>
-        </div>
-        <div class="hero-media reveal">
-          <video autoplay muted loop playsinline poster="5.jpg">
-            <source src="Donut1.mp4" type="video/mp4" />
+<div class="page">
+<video autoplay="" class="bg-video" loop="" muted="" playsinline="" poster="5.jpg">
+<source src="Donut2.mp4" type="video/mp4"/>
+</video>
+<div class="bg-overlay"></div>
+<div class="ambient">
+<span class="glow-one"></span>
+<span class="glow-two"></span>
+</div>
+<div class="shell">
+<header class="reveal">
+<div class="logo">Donut Palace &amp; Boba Tea</div>
+<nav class="nav">
+<a href="#story">Story</a>
+<a href="#menu">Menu</a>
+<a href="#gallery">Gallery</a>
+<a href="#visit">Visit</a>
+</nav>
+</header>
+<section class="hero">
+<div class="hero-copy reveal">
+<p style="text-transform: uppercase; letter-spacing: 0.24em; font-size: 0.75rem; margin: 0 0 16px;">Abilene, Kansas</p>
+<h1>Hand‑glazed donuts, modern boba, and a space worth the trip.</h1>
+<p>Fresh dough every morning, small‑batch glazes all day, and boba brewed with real tea. Stop in for a quick pick‑me‑up or linger with a warm dozen and a creamy brown sugar milk tea.</p>
+<div class="cta-row">
+<a class="cta primary" href="#visit">Plan your visit</a>
+<a class="cta secondary" href="#menu">See the menu</a>
+</div>
+</div>
+<div class="hero-media reveal">
+<video autoplay="" loop="" muted="" playsinline="" poster="5.jpg">
+<source src="Donut1.mp4" type="video/mp4"/>
             Your browser does not support the video tag.
           </video>
-          <div class="badge">Signature glaze + boba pearls • Fresh every morning</div>
-        </div>
-      </section>
-
-      <section class="strip reveal">
-        <video autoplay muted loop playsinline>
-          <source src="Boba1.mp4" type="video/mp4" />
-        </video>
-        <video autoplay muted loop playsinline>
-          <source src="Boba2.mp4" type="video/mp4" />
-        </video>
-        <video autoplay muted loop playsinline>
-          <source src="Boba3.mp4" type="video/mp4" />
-        </video>
-      </section>
-
-      <section id="story" class="section">
-        <div class="copy reveal">
-          <h2>Built to sell a feeling, not just a menu.</h2>
-          <p>We position Donut Palace & Boba Tea as a boutique stop for locals and travelers. The site leans into warm tones, editorial spacing, and crave‑worthy motion to turn casual visitors into cravings.</p>
-          <div class="cards">
-            <div class="card">
-              <h3>Luxury cues</h3>
-              <p>Layered gradients, soft shadows, and cinematic video loops communicate premium quality.</p>
-            </div>
-            <div class="card">
-              <h3>Fast decisions</h3>
-              <p>Clear calls to action lead to visiting, calling, or placing a quick pickup order.</p>
-            </div>
-          </div>
-        </div>
-        <div id="gallery" class="gallery reveal">
-          <img src="1.webp" alt="Fresh donut assortment" />
-          <img src="2.webp" alt="Boba tea close-up" />
-          <img src="3.webp" alt="Donut glaze drizzle" />
-          <img src="5.jpg" alt="Donut Palace interior" />
-        </div>
-      </section>
-
-      <section id="menu" class="menu reveal">
-        <h2>Menu highlights</h2>
-        <p>Curated favorites that translate beautifully in photos, video, and in-store displays.</p>
-        <div class="menu-grid">
-          <div class="menu-item">
-            <h3>Donut Collection</h3>
-            <ul>
-              <li>Classic glazed • honey vanilla finish</li>
-              <li>Wedding cake • almond glaze, pearl sugar</li>
-              <li>Matcha cloud • green tea glaze, sesame</li>
-            </ul>
-          </div>
-          <div class="menu-item">
-            <h3>Boba Rituals</h3>
-            <ul>
-              <li>Milk tea • brown sugar pearls</li>
-              <li>Lychee fruit tea • citrus lift</li>
-              <li>Signature matcha • oat milk foam</li>
-            </ul>
-          </div>
-        </div>
-      </section>
-
-      <section class="pull-quote reveal">
-        <p>"The kind of site that makes people detour just to try the donuts."</p>
-        <p class="note">Crafted for conversion: 15-second scroll depth, instant CTAs, and strong mobile visuals.</p>
-      </section>
-
-      <section id="visit" class="contact">
-        <div class="contact-card reveal">
-          <h3>Visit or call today</h3>
-          <p>401 N Buckeye Ave, Abilene, KS 67410</p>
-          <p>Phone: <a href="tel:+17852633489">(785) 263‑3489</a></p>
-          <div class="cta-row">
-            <a class="cta primary" href="https://maps.google.com/?q=401+N+Buckeye+Ave,+Abilene,+KS+67410" target="_blank" rel="noreferrer">Find the magic</a>
-            <a class="cta secondary" href="mailto:hello@donutpalace.com">Say hello</a>
-          </div>
-        </div>
-        <div class="info reveal">
-          <p><strong>Hours</strong></p>
-          <p>Mon–Sat: 5 AM – 3 PM</p>
-          <p>Sunday: 6 AM – 3 PM</p>
-          <p><strong>Order idea</strong></p>
-          <p>Pair a glazed dozen with two signature bobas for pickup.</p>
-        </div>
-      </section>
-
-      <footer class="footer reveal">
-        <span>© 2026 Donut Palace & Boba Tea</span>
-        <span>High-end concept landing page</span>
-      </footer>
-    </div>
-  </div>
-
-  <script>
+<div class="badge">Signature glazes + boba pearls • Made fresh daily</div>
+</div>
+</section>
+<section class="strip reveal">
+<article class="strip-item">
+<video autoplay="" loop="" muted="" playsinline="">
+<source src="Boba1.mp4" type="video/mp4"/>
+</video>
+<div class="history-fact">
+<p>Boba tea originated in Taiwan in the 1980s as a mix of milk tea, fruit, and tapioca pearls.</p>
+</div>
+</article>
+<article class="strip-item">
+<video autoplay="" loop="" muted="" playsinline="">
+<source src="Boba2.mp4" type="video/mp4"/>
+</video>
+<div class="history-fact">
+<p>The name "boba" comes from Cantonese usage tied to the chewy tapioca pearls.</p>
+</div>
+</article>
+<article class="strip-item">
+<video autoplay="" loop="" muted="" playsinline="">
+<source src="Boba3.mp4" type="video/mp4"/>
+</video>
+<div class="history-fact">
+<p>Bubble tea culture spread globally and influenced modern coffee and tea menus.</p>
+</div>
+</article>
+</section>
+<section class="section" id="story">
+<div class="copy reveal">
+<h2>A neighborhood favorite with a boutique touch.</h2>
+<p>Donut Palace &amp; Boba Tea is a bright, welcoming stop for Abilene locals and road‑trippers alike. We’re known for pillowy donuts, seasonal glazes, and boba that balances creamy and refreshing.</p>
+<div class="cards">
+<div class="card">
+<h3>Made fresh</h3>
+<p>Our dough is mixed, proofed, and fried on site each morning for a warm‑from‑the‑case bite.</p>
+</div>
+<div class="card">
+<h3>Easy to love</h3>
+<p>Classic flavors, seasonal specials, and boba made to order for a quick treat or a dozen to share.</p>
+</div>
+</div>
+</div>
+<div class="gallery reveal" id="gallery">
+<img alt="Fresh donut assortment" src="1.webp"/>
+<img alt="Boba tea close-up" src="2.webp"/>
+<img alt="Donut glaze drizzle" src="3.webp"/>
+<img alt="Donut Palace interior" src="5.jpg"/>
+</div>
+</section>
+<section class="menu reveal" id="menu">
+<h2>Menu highlights</h2>
+<p>Customer favorites that change with the season and pair perfectly with a boba pick‑me‑up.</p>
+<div class="menu-grid">
+<div class="menu-item">
+<h3>Donut Collection</h3>
+<ul>
+<li>Classic glazed • honey‑vanilla finish</li>
+<li>Wedding cake • almond glaze, pearl sugar</li>
+<li>Matcha cloud • green tea glaze, toasted sesame</li>
+</ul>
+</div>
+<div class="menu-item">
+<h3>Boba Rituals</h3>
+<ul>
+<li>Milk tea • brown sugar pearls</li>
+<li>Lychee fruit tea • bright citrus lift</li>
+<li>Signature matcha • oat milk foam</li>
+</ul>
+</div>
+</div>
+</section>
+<section class="pull-quote reveal">
+<p>"The kind of place you discover once and keep coming back to."</p>
+<p class="note">Weekday mornings are our busiest—order ahead by phone for the fastest pickup.</p>
+</section>
+<section class="contact" id="visit">
+<div class="contact-card reveal">
+<h3>Visit or call today</h3>
+<p>401 N Buckeye Ave, Abilene, KS 67410</p>
+<p>Phone: <a href="tel:+17852633489">(785) 263‑3489</a></p>
+<div class="cta-row">
+<a class="cta primary" href="https://maps.google.com/?q=401+N+Buckeye+Ave,+Abilene,+KS+67410" rel="noreferrer" target="_blank">Get directions</a>
+<a class="cta secondary" href="mailto:hello@donutpalace.com">Email us</a>
+</div>
+</div>
+<div class="info reveal">
+<p><strong>Hours</strong></p>
+<p>Mon–Sat: 5 AM – 3 PM</p>
+<p>Sunday: 6 AM – 3 PM</p>
+<p><strong>Order idea</strong></p>
+<p>Pair a glazed dozen with two signature bobas for pickup.</p>
+</div>
+</section>
+<footer class="footer reveal">
+<span>© 2026 Donut Palace &amp; Boba Tea</span>
+<span>Fresh donuts. Modern boba. Friendly smiles.</span>
+</footer>
+</div>
+</div>
+<script>
     const observer = new IntersectionObserver((entries) => {
       entries.forEach((entry) => {
         if (entry.isIntersecting) {
@@ -650,4 +679,3 @@
   </script>
 </body>
 </html>
-
